--- a/index.html
+++ b/index.html
@@ -103,7 +103,15 @@
     </main>
 
     <footer>
-        Ini Footer
-    </footer>
+        <div class="container">
+          <img src="https://www.pinclipart.com/picdir/big/73-731231_clipart-hand-teamwork-team-work-png-download.png">
+          <h1> 
+              <span class="satu">CEB </span>
+              <span class="dua">Class I </span>
+              <span class="tiga">Team 02 </span>
+          </h1>
+          <p>Good Team, Great Work</p>
+        </div>
+      </footer>
 </body>
 </html>
