--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     </main>
 
     <footer>
-        <div class="container">
-          <img src="https://www.pinclipart.com/picdir/big/73-731231_clipart-hand-teamwork-team-work-png-download.png">
+        <div >
+          <img src="/images/hand-teamwork.png">
           <h1> 
               <span class="satu">CEB </span>
               <span class="dua">Class I </span>
