--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <footer>
         <div >
-          <img src="/images/hand-teamwork.png">
+          <img src="images/hand-teamwork.png">
           <h1> 
               <span class="satu">CEB </span>
               <span class="dua">Class I </span>
